# pikuma-game-engine

./: .gitignore  CMakeLists.txt  README.md  build.ps1  get-env.ps1.example
src/: game.cpp  game.hpp  main.cpp
src/game/: game.cpp
src/logger/: logger.cpp  logger.hpp
src/objects/: simple-object.cpp  simple-object.hpp
src/resources/: font-resource.cpp  font-resource.hpp  image-resource.cpp  image-resource.hpp  resource-manager.cpp  resource-manager.hpp  resource.cpp  resource.hpp  sound-resource.cpp  sound-resource.hpp
